--- a/loupe-extension/package.json
+++ b/loupe-extension/package.json
@@ -12,6 +12,7 @@
   "activationEvents": [
     "*"
   ],
+  "license": "MIT",
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
