--- a/loupe-browser/package.json
+++ b/loupe-browser/package.json
@@ -4,15 +4,18 @@
   "main": "index.html",
   "license": "MIT",
   "dependencies": {
+    "cirrus-ui": "^0.6.1",
     "codemirror": "^5.59.2",
     "codemirror-github-dark": "^0.4.1",
     "react": ">=15.5 <16",
     "react-codemirror": "^1.0.0",
-    "react-dom": ">=15.5 <16"
+    "react-dom": ">=15.5 <16",
+    "xterm": "^4.10.0"
   },
   "devDependencies": {
     "@types/codemirror": "^0.0.107",
     "@types/vscode": "^1.52.0",
+    "@types/xterm": "^3.0.0",
     "parcel": "^1.12.4",
     "typescript": "^4.1.3",
     "vscode": "^1.1.37",
