--- a/loupe-browser/package.json
+++ b/loupe-browser/package.json
@@ -17,6 +17,7 @@
     "@types/vscode": "^1.52.0",
     "@types/xterm": "^3.0.0",
     "parcel": "^1.12.4",
+    "sass": "^1.32.8",
     "typescript": "^4.1.3",
     "vscode": "^1.1.37",
     "vscode-test": "^1.4.1"
