--- a/loupe-shell/package.json
+++ b/loupe-shell/package.json
@@ -4,11 +4,24 @@
   "description": "Share your terminal session with loupe",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "start": "npm run compile && node dist/index.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "node-loader": "^1.0.2",
+    "node-pty": "^0.10.0",
     "ws": "^7.4.2"
+  },
+  "devDependencies": {
+    "@types/node": "^12.11.7",
+    "@types/ws": "^7.4.0",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
+    "webpack": "^5.19.0",
+    "webpack-cli": "^4.4.0"
   }
 }
