--- a/loupe-shell/package.json
+++ b/loupe-shell/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "webpack",
-    "watch": "webpack --watch",
+    "compile": "npx webpack",
+    "watch": "npx webpack --watch",
     "start": "npm run compile && node dist/index.js"
   },
   "author": "",
@@ -22,6 +22,6 @@
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.19.0",
-    "webpack-cli": "^4.4.0"
+    "webpack-cli": "^4.5.0"
   }
 }
